feat: add insights from awesome-scalability Performance section
Sources: Netflix, LinkedIn, Indeed, Dropbox, Twitter/X, DoorDash, eBay,
Yelp, Twitch, Zapier, Instagram, Allegro, Uber, Bumble, Atlassian, Flipkart

Changes by chapter:
- 07-containers-k8s: CFS throttle kernel bug (Indeed), LLC/NUMA isolation via
  cpuset + Intel RDT/CAT (Netflix predictive CPU isolation)
- 04-disk-storage: ext4 + HDD kernel regression (kernels 4.5-5.6), mq-deadline
  module vs built-in check (LinkedIn)
- 06-ebpf-tracing: Go + uprobes gotchas — uretprobe crash, ABI register shift
  since Go 1.17 (Bumble)
- 15-memory-subsystem: jemalloc LD_PRELOAD, Python gc.freeze() for fork(),
  Go GOGC/SetMemoryLimit/memory ballast (Twitch/Instagram/Zapier)
- 09-network-tuning: Brotli quality levels + nginx aio threads, ssl_buffer_size,
  ECDSA, FQ+CUBIC, pcre_jit (Dropbox)
- 10-java-jvm: VT livelock production case (Netflix Java 21), G1 Humongous
  Objects, StringDeduplication warning at large heaps, heap sizing formulas
- 14-database-profiling: Redis section — LZ4 client-side compression, active
  expiration tuning ACTIVE_EXPIRE_CYCLE_LOOKUPS_PER_LOOP, MongoDB oplog
  compression pattern (DoorDash/Twitter/eBay)
- 05-performance-profiling: vmprof + production profiling methodology — canary
  saturated-state, lazy debug logging 147ms→1ms trick, PyPy (Yelp)